# openapi.yaml
@@ -344,7 +344,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponsePageEnrollmentResponse'
 
-  /api/v1/auth/change-password:
+  /api/v1/users/change-password:
     post:
       summary: Change password for currently logged in user
       tags:
@@ -879,13 +879,13 @@ components:
       required:
         - oldPassword
         - newPassword
-        - confirmNewPassword
+        - confirmPassword
       properties:
         oldPassword:
           type: string
         newPassword:
           type: string
-        confirmNewPassword:
+        confirmPassword:
           type: string
 
     ForgotPasswordRequest:
@@ -902,13 +902,13 @@ components:
       required:
         - token
         - newPassword
-        - confirmNewPassword
+        - confirmPassword
       properties:
         token:
           type: string
         newPassword:
           type: string
-        confirmNewPassword:
+        confirmPassword:
           type: string
 
     GradeRequest:
